Atualização na formatação do index.html

--- a/index.html
+++ b/index.html
@@ -1,60 +1,64 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfólio Matheus Jorge</title>
-</head>
-<body>
+  </head>
+  <body>
     <ul>
-        <li><a href="#habilidades-orgulho">Principais Habilidades</a></li>
-        <li><a href="#outras-habilidades">Outras Habilidades</a></li>
+      <li><a href="#habilidades-orgulho">Principais Habilidades</a></li>
+      <li><a href="#outras-habilidades">Outras Habilidades</a></li>
     </ul>
 
     <h1>Matheus Jorge Soares Ribera</h1>
-    <img src="" alt="Imagem">
+    <img src="" alt="Imagem" />
 
     <h2>Estudante da Trybe da<strong>Turma 27 - Set/2022</strong></h2>
     <h4><em>Futuro Desenvolvedor Beck End '-'</em></h4>
 
     <h4>
-    <a href="" target="_blank">LinkedIn</a><br>
-    <a href="https://github.com/MathRibera" target="_blank">GitHub</a>
+      <a href="" target="_blank">LinkedIn</a><br />
+      <a href="https://github.com/MathRibera" target="_blank">GitHub</a>
     </h4>
-    
+
     <ul id="habilidades-orgulho">
-        <h4>Habilidades que mais me orgulho</h4>
-        <li>Proativo</li>
-        <li>Facilidade em aprender</li>
-        <li>Compartilhar conhecimento</li>
-        <li>Comprometimento</li>
-        <li>Empatia</li>
+      <h4>Habilidades que mais me orgulho</h4>
+      <li>Proativo</li>
+      <li>Facilidade em aprender</li>
+      <li>Compartilhar conhecimento</li>
+      <li>Comprometimento</li>
+      <li>Empatia</li>
     </ul>
 
     <ul id="outras-habilidades">
-        <h4>Outras Habilidades</h4>
-        <strong><em>Se houver [x] é porque tenho conhecimento, se estiver em [ ], é porque estou me desenvolvendo!</em></strong>
-        <li>[x] UNIX & SHELL</li>
-        <li>[x] HTML 5</li>
-        <li>[ ] CSS</li>
-        <li>[ ] JAVASCRIPT</li>
-        <li>[ ] JS AVANÇADO</li>
-        <li>[ ] REACT</li>
-        <li>[ ] METODOLOGIA ÁGEIS</li>
-        <li>[ ] REDUX</li>
-        <li>[ ] API</li>
-        <li>[ ] SQL</li>
-        <li>[ ] NODE.JS</li>
-        <li>[ ] Arquitetura de Software</li>
-        <li>[ ] DEPLOY</li>
-        <li>[ ] TYPESCRIPT</li>
-        <li>[ ] MONGODB</li>
-        <li>[ ] VPS</li>
-        <li>[ ] PYTHON</li>
-        <li>[ ] ALGORITMOS</li>
-        <li>[ ] ESTRUTURA DE DADOS</li>
+      <h4>Outras Habilidades</h4>
+      <strong
+        ><em
+          >Se houver [x] é porque tenho conhecimento, se estiver em [ ], é
+          porque estou me desenvolvendo!</em
+        ></strong
+      >
+      <li>[x] UNIX & SHELL</li>
+      <li>[x] HTML 5</li>
+      <li>[ ] CSS</li>
+      <li>[ ] JAVASCRIPT</li>
+      <li>[ ] JS AVANÇADO</li>
+      <li>[ ] REACT</li>
+      <li>[ ] METODOLOGIA ÁGEIS</li>
+      <li>[ ] REDUX</li>
+      <li>[ ] API</li>
+      <li>[ ] SQL</li>
+      <li>[ ] NODE.JS</li>
+      <li>[ ] Arquitetura de Software</li>
+      <li>[ ] DEPLOY</li>
+      <li>[ ] TYPESCRIPT</li>
+      <li>[ ] MONGODB</li>
+      <li>[ ] VPS</li>
+      <li>[ ] PYTHON</li>
+      <li>[ ] ALGORITMOS</li>
+      <li>[ ] ESTRUTURA DE DADOS</li>
     </ul>
-
-</body>
+  </body>
 </html>
