Projeto terminado de acordo com o que foi pedido

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     </div>
 
     <div class="secao-4">
-      <h2>Habilidades que mais me orgulho</h2>
-      <ul id="indice">
+      <h2 id="indice">Habilidades que mais me orgulho</h2>
+      <ul id="line-format">
         <li>Proativo</li>
         <li>Facilidade em aprender</li>
         <li>Compartilhar conhecimento</li>
@@ -71,8 +71,8 @@
     </div>
 
     <div class="secao-5">
-      <h2>Outras Habilidades</h2>
-      <ul id="indice">
+      <h2 id="indice">Outras Habilidades</h2>
+      <ul id="line-format">
         <strong
           ><em
             >Se houver [x] é porque tenho conhecimento, se estiver em [ ], é
