Alteraçao no html

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
       <ul id="line-format">
         <strong
           ><em
-            >Se houver [x] é porque tenho conhecimento, se estiver em [ ], é
-            porque estou me desenvolvendo!</em
+            >Se houver [x] é porque tenho conhecimento, se estiver em [~], é
+            porque estou APRENDENDO!</em
           ></strong
         >
         <li>[x] UNIX & SHELL</li>
-        <li>[x] HTML 5</li>
-        <li>[ ] CSS</li>
+        <li>[~] HTML 5</li>
+        <li>[~] CSS</li>
         <li>[ ] JAVASCRIPT</li>
         <li>[ ] JS AVANÇADO</li>
         <li>[ ] REACT</li>
