finalizaçao do html

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   </head>
   <body>
     <!-- Navegação -->
-
+    <div class="tudo">
     <div class="ul-indice">
       <ul>
-        <li><a href="#habilidades-orgulho">Principais Habilidades</a></li>
-        <li><a href="#outras-habilidades">Outras Habilidades</a></li>
+        <li><a href="#habilidades">Principais Habilidades</a></li>
+        <li><a href="#o-habilidades">Outras Habilidades</a></li>
       </ul>
     </div>
 
@@ -59,7 +59,7 @@
     </div>
 
     <div class="secao-4">
-      <h2 id="indice">Habilidades que mais me orgulho</h2>
+      <h2 id="habilidades">Habilidades que mais me orgulho</h2>
       <ul id="line-format">
         <li>Proativo</li>
         <li>Facilidade em aprender</li>
@@ -71,7 +71,7 @@
     </div>
 
     <div class="secao-5">
-      <h2 id="indice">Outras Habilidades</h2>
+      <h2 id="o-habilidades">Outras Habilidades</h2>
       <ul id="line-format">
         <strong
           ><em
@@ -100,5 +100,6 @@
         <li>[ ] ESTRUTURA DE DADOS</li>
       </ul>
     </div>
+  </div>
   </body>
 </html>
