finalizado até hobbies

--- a/index.html
+++ b/index.html
@@ -1,114 +1,101 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./Style.css" />
-    <title>Portfolio de Matheus Jorge</title>
-  </head>
-  <body>
-    
-    <div class="background-index">
-      <div class="main">
+<html lang="pt-BR">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./Style.css">
+  <title>Portfolio Matheus Jorge</title>
+</head>
+
+<body>
+</body>
+
+<header>
+  <div class="tamanho">
+    <div class="cabecalho">
+      <img src="./img/perfil.png" width="60px" alt="imagem-porfolio">
       <div class="menu">
-        <div class="home-name">
-          <a href="./index.html">Matheus Jorge</a>
-        </div>
-        <div class="list-one">
-          <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./About.html">About me</a></li>
-            <li><a href="./Projects">Projects</a></li>
-            <li><a href="./Contact">Contact</a></li>
-          </ul>
-        </div>
+        <a href="" class="menu-item">Home</a>
+        <a href="" class="menu-item">About</a>
+        <a href="" class="menu-item">GitHub</a>
+        <a href="" class="menu-item">Social</a>
       </div>
-      </div>
-
-      <div class="divisao">
-        <div class="lat-esq">
-          <div class="img">
-            <img
-              id="face-img"
-              src="https://lever-client-logos.s3.us-west-2.amazonaws.com/1ecf7375-9cc9-4b3d-ba9a-c1cdcab267b5-1637340507739.png"
-              alt="img-profile"
-            />
-          </div>
-          <div class="dados">
-            <h1 id="alignment">Matheus Jorge</h1>
-            <h2 id="alignment2">Web Developer</h2>
-            <div class="profile">
-              <img
-                src="./img/png-transparent-profile-logo-computer-icons-user-user-blue-heroes-logo-thumbnail-removebg-preview.png"
-                width="50px"
-                alt="profile"
-              />
-              <h2>Profile</h2>
-              <p>
-                
-I'm Matheus, I'm 24 years old and I'm looking for my first job in the Web Development area.
-              </p>
-            </div>
-            <div class="contact">
-              <div class="list-tell">
-                <img
-                  src="./img/png-transparent-address-book-computer-icons-font-awesome-contact-icon-text-logo-web-template-removebg-preview.png"
-                  width="30px"
-                  alt="contact"
-                />
-                <h3>Contact</h3>
-              </div>
-
-              <div id="meio-contact">
-                <img
-                  src="./img/png-transparent-ringing-phone-logo-whatsapp-dialer-android-google-contacts-phone-logo-blue-text-logo-removebg-preview__1_-removebg-preview.png"
-                  width="30px"
-                  alt="tell"
-                />
-                <h4>(15) 9 9999-9999</h4>
-              </div>
-              <div id="meio-contact">
-                <img
-                  src="./img/4202011emailgmaillogomailsocialsocialmedia-115677_115624.png"
-                  alt="gmail"
-                  width="30px"
-                />
-                <h4>Bs.fenixfl@gmail.com</h4>
-              </div>
-              <div id="meio-contact">
-                <img
-                  src="./img/b3ccd57b054a73af1a0d281265b54ec8-removebg-preview.png"
-                  alt="address"
-                  width="30px"
-                />
-                <h4>Itapetininga, SP - Brazil</h4>
-              </div>
-              <div id="meio-contact">
-                <img
-                  src="./img/25231.png"
-                  alt="gmail"
-                  width="30px"
-                />
-                <a href="https://github.com/MathRibera"><h4></h4>GitHub <span><~ CLICK ME</span> </h4></a>
-              </div>
-            </div>
-          </div>
+    </div>
+  </div>
+</header>
+<section>
+  <div class="tamanho-conteudo">
+    <div class="cabecalho-nome-img">
+      <img src="https://cdn-images-1.medium.com/max/1200/1*_8rYOyJj9qiQsmeoVk3Gfg.png" width="400px"
+        alt="imagem-perfil">
+      <div class="menu-info">
+        <div class="infos">
+          <div id="cont-info">
+          <img src="./img/perfil.png" alt="">
+          <h1>Matheus Jorge S., 24 years</h1>
         </div>
-        <div class="lat-dir">
-          <div class="employment">
-            <div class="last-employ">
-              <p>2021/12 - 2022/09</p>
-              <h3>Mercado Livre</h3>
-              <h5>Logistics Assistant</h5>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Eligendi, atque vitae. Non minima, eum velit ad,
-              </p>
-            </div>
-          </div>
+        <div id="cont-info">
+          <img src="./img/residencia.png" alt="">
+          <h3>Itapetininga, Sp, Brazil</h3>
+        </div>
+        <div id="cont-info">
+          <img src="./img/gmail.png" alt="">
+          <h3>Bs.fenixfl@gmail.com</h3>
+        </div>
+        <div id="cont-info">
+          <img src="./img/github.png" alt="">
+          <h3><a href="https://www.Github.com" target="_blank">GITHUB</a><span> <~~ CLICK ME </span></h3>
+        </div>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+</section>
+
+<section>
+  <div class="tamanho-skills">
+    <div class="cabecalho-h">
+      <h1>Soft Skills</h1>
+      <h2>Honesty</h2>
+      <h2>Empathy</h2>
+      <h2>Flexibility</h2>
+      <h2>Team work</h2>
+      <h2>Commitment</h2>
+      <h1>Knowledge</h1>
+      <h2>HTML 5</h2>
+      <h2>CSS</h2>
+      <h2>PYTHON ( BASIC )</h2>
+      <h2>JAVASCRIPT ( BASIC )</h2>
+    </div>
+  </div>
+  <div class="tamanho-hobbies">
+    <div class="cabecalho-h">
+      <h1>HOBBIES</h1>
+      <h2>Going out and eating at restaurants</h2>
+      <h2>Playing music</h2>
+      <h2>Learning a new skill</h2>
+      <h2>Playing Pc games</h2>
+      <h2>Following technology and financial news</h2>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</body>
+
 </html>
