--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div id="cont-info">
           <img src="./img/github.png" alt="">
-          <h3><a href="https://www.Github.com" target="_blank">GITHUB</a><span> <~~ CLICK ME </span></h3>
+          <h3><a href="https://www.Github.com" target="_blank">GITHUB</a></h3>
         </div>
         </div>
       </div>
