--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" type="text.css" href="./style.css">
+  <link rel="stylesheet" href="./style.css">
   <title>Portfolio Matheus Jorge</title>
 </head>
 
 <body>
-</body>
-
 <header>
   <div class="tamanho">
     <div class="cabecalho">
