--- a/index.html
+++ b/index.html
@@ -56,26 +56,26 @@
   <div class="tamanho-skills">
     <div class="cabecalho-h">
       <h1>Soft Skills</h1>
-      <h2>Honesty</h2>
-      <h2>Empathy</h2>
-      <h2>Flexibility</h2>
-      <h2>Team work</h2>
-      <h2>Commitment</h2>
+      <h3>Honesty</h3>
+      <h3>Empathy</h3>
+      <h3>Flexibility</h3>
+      <h3>Team work</h3>
+      <h3>Commitment</h3>
       <h1>Knowledge</h1>
-      <h2>HTML 5</h2>
-      <h2>CSS</h2>
-      <h2>PYTHON ( BASIC )</h2>
-      <h2>JAVASCRIPT ( BASIC )</h2>
+      <h3>HTML 5</h>
+      <h3>CSS</h3>
+      <h3>PYTHON ( BASIC )</h3>
+      <h3>JAVASCRIPT ( BASIC )</h3>
     </div>
   </div>
   <div class="tamanho-hobbies">
     <div class="cabecalho-h">
       <h1>HOBBIES</h1>
-      <h2>Going out and eating at restaurants</h2>
-      <h2>Playing music</h2>
-      <h2>Learning a new skill</h2>
-      <h2>Playing Pc games</h2>
-      <h2>Following technology and financial news</h2>
+      <h3>Going out and eating at restaurants</h3>
+      <h3>Playing music</h3>
+      <h3>Learning a new skill</h3>
+      <h3>Playing Pc games</h3>
+      <h3>Following technology and financial news</h3>
     </div>
   </div>
 </section>
