--- a/index.html
+++ b/index.html
@@ -1,99 +1,88 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./style.css">
-  <title>Portfolio Matheus Jorge</title>
-</head>
-
-<body>
-<header>
-  <div class="tamanho">
-    <div class="cabecalho">
-      <img src="./img/perfil.png" width="60px" alt="imagem-porfolio">
-      <div class="menu">
-        <a href="" class="menu-item">Home</a>
-        <a href="" class="menu-item">About</a>
-        <a href="" class="menu-item">GitHub</a>
-        <a href="" class="menu-item">Social</a>
-      </div>
-    </div>
-  </div>
-</header>
-<section>
-  <div class="tamanho-conteudo">
-    <div class="cabecalho-nome-img">
-      <img src="https://cdn-images-1.medium.com/max/1200/1*_8rYOyJj9qiQsmeoVk3Gfg.png" width="400px"
-        alt="imagem-perfil">
-      <div class="menu-info">
-        <div class="infos">
-          <div id="cont-info">
-          <img src="./img/perfil.png" alt="">
-          <h1>Matheus Jorge S., 24 years</h1>
-        </div>
-        <div id="cont-info">
-          <img src="./img/residencia.png" alt="">
-          <h3>Itapetininga, Sp, Brazil</h3>
-        </div>
-        <div id="cont-info">
-          <img src="./img/gmail.png" alt="">
-          <h3>Bs.fenixfl@gmail.com</h3>
-        </div>
-        <div id="cont-info">
-          <img src="./img/github.png" alt="">
-          <h3><a href="https://www.Github.com" target="_blank">GITHUB</a></h3>
-        </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section>
-  <div class="tamanho-skills">
-    <div class="cabecalho-h">
-      <h1>Soft Skills</h1>
-      <h3>Honesty</h3>
-      <h3>Empathy</h3>
-      <h3>Flexibility</h3>
-      <h3>Team work</h3>
-      <h3>Commitment</h3>
-      <h1>Knowledge</h1>
-      <h3>HTML 5</h>
-      <h3>CSS</h3>
-      <h3>PYTHON ( BASIC )</h3>
-      <h3>JAVASCRIPT ( BASIC )</h3>
-    </div>
-  </div>
-  <div class="tamanho-hobbies">
-    <div class="cabecalho-h">
-      <h1>HOBBIES</h1>
-      <h3>Going out and eating at restaurants</h3>
-      <h3>Playing music</h3>
-      <h3>Learning a new skill</h3>
-      <h3>Playing Pc games</h3>
-      <h3>Following technology and financial news</h3>
-    </div>
-  </div>
-</section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
-
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Meu Portfólio</title>
+  </head>
+  <body>
+    <nav>
+      <h1>Hello, i'm Matheus</h1>
+      <hr style="border: 0.4px solid gray" />
+    </nav>
+    <main>
+      <section class="languages-and-techs">
+        <section class="languages">
+          <h2>Languages</h2>
+          <img
+            src="images/js-svgrepo-com.svg"
+            alt="Javascript icon"
+            width="30PX"
+          />
+          <img src="images/py-svgrepo-com.svg" alt="CSS3 icon" width="30PX" />
+        </section>
+        <hr style="border: 0.4px solid gray" />
+        <section class="techs">
+          <h2>Frameworks and Techs</h2>
+          <img
+            src="images/html-svgrepo-com.svg"
+            alt="HTML5 icon"
+            width="30PX"
+          />
+          <img
+            src="images/css-3-svgrepo-com.svg"
+            alt="CSS3 icon"
+            width="30PX"
+          />
+          <img src="images/git-svgrepo-com.svg" alt="CSS3 icon" width="30PX" />
+          <img src="images/npm-svgrepo-com.svg" alt="CSS3 icon" width="30PX" />
+          <img
+            src="images/bootstrap-svgrepo-com.svg"
+            alt="CSS3 icon"
+            width="30PX"
+          />
+        </section>
+        <hr style="border: 0.4px solid gray" />
+        <section class="os">
+          <h2>Operating Systems</h2>
+          <img
+            src="images/linux-svgrepo-com.svg"
+            alt="CSS3 icon"
+            width="30PX"
+          />
+          <img
+            src="images/windows-svgrepo-com.svg"
+            alt="CSS3 icon"
+            width="30PX"
+          />
+        </section>
+        <hr style="border: 0.4px solid gray" />
+        <section class="stats-projects">
+            <section class="gh-stats">
+                <h2>My Github Status</h2>
+            <img
+              src="https://github-readme-stats.vercel.app/api?username=MathRibera"
+              alt="Github stats"
+            />
+            <img
+              src="https://github-readme-stats.vercel.app/api/top-langs/?username=MathRibera"
+              alt=""
+            />
+          </section>
+          <section class="projects">
+              <h2>My Projects</h2>
+            <ul>
+                <li><a href="https://github.com/MathRibera/Projeto-Trybe/tree/main/sd-027-a-project-lessons-learned">Lessons Learned (LINK - CLICK ME)</a></li>
+                <li><a href="https://github.com/MathRibera/Projeto-Trybe/tree/main/sd-027-a-project-color-guess">Color Guess (LINK - CLICK ME)</a></li>
+                <li><a href="https://github.com/MathRibera/Projeto-Trybe/tree/main/sd-027-a-project-pixels-art">Pixels Art (LINK - CLICK ME)</a></li>
+                <li><a href="https://github.com/MathRibera/Projeto-Trybe/tree/main/sd-027-a-project-todo-list">Todo List (LINK - CLICK ME)</a></li>
+                <li><a href="https://github.com/MathRibera/Projeto-Trybe/tree/main/sd-027-a-project-trybewarts">(Last) TrybeWarts (LINK - CLICK ME)</a></li>
+            </ul>
+          </section>
+        </section>
+      </section>
+    </main>
+  </body>
 </html>
